# basaltcpp

./: .clang-format  .gitignore  Basalt.sln  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md  ROADMAP.md
api/: API.vcxproj  API.vcxproj.filters  CMakeLists.txt
api/api/: CMakeLists.txt  client_app.h  dear_imgui.cpp  dear_imgui.h  debug.cpp  debug.h  engine.cpp  engine.h  input.cpp  input.h  input_events.h  prelude.h  types.h
api/api/base/: CMakeLists.txt  enum_array.h  utils.h  vec.h
api/api/gfx/: CMakeLists.txt  camera.cpp  camera.h  command_list_recorder.cpp  command_list_recorder.h  compositor.cpp  compositor.h  device_state_cache.cpp  device_state_cache.h  draw_target.h  drawable.h  resource_cache.cpp  resource_cache.h  scene_view.cpp  scene_view.h  solid_color_view.cpp  solid_color_view.h  types.h
api/api/math/: CMakeLists.txt  constants.h  mat4.cpp  mat4.h  rectangle.h  types.h  vec2.h  vec3.cpp  vec3.h  vector3.cpp  vector3.h
api/api/platform/: CMakeLists.txt  platform.h
api/api/resources/: CMakeLists.txt  resource_registry.h  types.h
api/api/scene/: CMakeLists.txt  scene.cpp  scene.h  transform.cpp  transform.h  types.h
api/api/shared/: CMakeLists.txt  asserts.cpp  asserts.h  color.h  config.h  data.h  handle.h  handle_pool.h  log.cpp  resource_registry.cpp  resource_registry.h  size2d.h  types.h
app/: App.manifest  App.vcxproj  App.vcxproj.filters  CMakeLists.txt
app/app/: CMakeLists.txt  app.cpp  app.h  build_config.h  dear_imgui.cpp  dear_imgui.h  debug.cpp  debug.h  engine.cpp  globals.h  input_manager.cpp  input_manager.h  key_map.h  main.cpp  messages.cpp  messages.h  platform.cpp  util.cpp  util.h  window.cpp  window.h
app/app/base/: platform.cpp
app/app/d3d9/: CMakeLists.txt  context.cpp  context.h  context_factory.cpp  context_factory.h  d3d9_custom.h  device.cpp  device.h  factory.cpp  factory.h  renderer.cpp  renderer.h  types.h  util.cpp  util.h
app/app/gfx/: CMakeLists.txt  compositor.cpp  compositor.h  debug.cpp  debug.h  types.h  utils.cpp  utils.h
app/app/shared/: CMakeLists.txt  Windows_custom.h  util.cpp  util.h
libapi/: CMakeLists.txt  libapi.natvis
libapi/basalt/: CMakeLists.txt
libapi/basalt/api/: CMakeLists.txt  bootstrap.h  client_app.h  debug.cpp  debug.h  debug_ui.h  engine.h  input.h  input_events.h  input_layer.cpp  input_layer.h  layer.cpp  layer.h  prelude.h  resource_manager.h  resource_registry.cpp  resource_registry.h  scene_view.cpp  scene_view.h  solid_color_view.cpp  solid_color_view.h  types.h  view.cpp  view.h
libruntime/: CMakeLists.txt
libruntime/basalt/: CMakeLists.txt  dear_imgui.cpp  dear_imgui.h  debug_ui.cpp  input_manager.cpp  input_manager.h  runtime.cpp  runtime.h  scene_view.cpp  types.h  view.cpp
libruntime/basalt/api/: CMakeLists.txt  debug_ui.cpp  engine.cpp  input.cpp  resource_manager.cpp  scene_view.cpp  view.cpp
libruntime/basalt/gfx/: CMakeLists.txt  compositor.cpp  compositor.h  context.cpp  debug.cpp  debug.h  device_state_cache.cpp  device_state_cache.h  environment.cpp  filtering_command_list.cpp  filtering_command_list.h  gfx_system.cpp  material.cpp  material_class.cpp  mesh.cpp  resource_cache.cpp  types.h  utils.cpp  utils.h
libruntime/basalt/scene/: CMakeLists.txt  parent_system.cpp  transform_system.cpp
platformlibs/libwin32/: CMakeLists.txt  app.manifest.in  main.cpp
platformlibs/libwin32/basalt/: CMakeLists.txt  engine.cpp
runtime/: App.vcxproj  App.vcxproj.filters  CMakeLists.txt  Input.cpp  Runtime.vcxproj  Runtime.vcxproj.filters  Scene.cpp
runtime/gfx/: Camera.h  Gfx.cpp  RenderComponent.h
runtime/gfx/backend/: CMakeLists.txt  Types.h
runtime/math/: CMakeLists.txt  Constants.h  Mat4.cpp  Mat4.h
runtime/platform/: CMakeLists.txt
runtime/platform/events/: CMakeLists.txt  KeyEvents.h  WindowEvents.h
runtime/platform/win32/: CMakeLists.txt  D3D9GfxContext.cpp  D3D9GfxContext.h  Win32KeyMap.h  Win32Platform.h  Win32Util.h  main.cpp
runtime/runtime/: CMakeLists.txt  Engine.cpp  Engine.h  IApplication.h  Input.cpp  Input.h  Prelude.h  Scene.cpp  Scene.h  client_app.h  dear_imgui.cpp  dear_imgui.h  debug.cpp  debug.h  engine.cpp  engine.h  input.cpp  input.h  prelude.h  types.h
runtime/runtime/gfx/: CMakeLists.txt  Camera.cpp  Camera.h  Gfx.cpp  Gfx.h  RenderComponent.h  camera.cpp  camera.h  command_list_recorder.h  compositor.cpp  compositor.h  device_state_cache.cpp  device_state_cache.h  draw_target.cpp  draw_target.h  drawable.h  scene_view.cpp  scene_view.h  types.h  visual.cpp  visual.h
runtime/runtime/math/: CMakeLists.txt  Mat4.cpp  Mat4.h  Vec2.cpp  Vec2.h  Vec2.t.h  Vec3.cpp  Vec3.h  constants.h  mat4.cpp  mat4.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
runtime/runtime/platform/: CMakeLists.txt  IGfxContext.h  Platform.h
runtime/runtime/scene/: CMakeLists.txt  scene.cpp  scene.h  transform.cpp  transform.h  types.h
runtime/runtime/shared/: Asserts.cpp  Asserts.h  CMakeLists.txt  Color.h  Config.h  Data.h  Handle.h  HandlePool.h  Log.cpp  Log.h  Size2D.h  Types.h  asserts.cpp  asserts.h  color.h  config.h  data.h  handle.h  handle_pool.h  log.cpp  log.h  size2d.h  types.h
runtime/shared/: Asserts.cpp  Color.cpp  Config.h  Exceptions.h  Handle.h  HandlePool.h  Log.cpp  Log.h
runtime/shared/win32/: CMakeLists.txt
sandbox/: App.manifest  BasaltApp.props  CMakeLists.txt  Sandbox.cpp  Sandbox.h  Sandbox.vcxproj  Sandbox.vcxproj.filters  bootstrap.cpp  config_defaults.h
sandbox/basalt/sandbox/: CMakeLists.txt  d3d9_tutorials.cpp  d3d9_tutorials.h  sandbox.cpp  sandbox.h  settings.cpp  settings.h  settings_ui.cpp  settings_ui.h  test_case.h
sandbox/d3d9_tutorials/: Device.h  Lights.cpp  Textures.cpp  Textures.h  Vertices.cpp  Vertices.h
sandbox/sandbox/: CMakeLists.txt  ITestCase.h  Sandbox.cpp  Sandbox.h  TestCase.h  sandbox.cpp  sandbox.h  test_case.h
sandbox/sandbox/d3d9/: CMakeLists.txt  device.cpp  device.h  lights.cpp  lights.h  matrices.cpp  matrices.h  meshes.cpp  meshes.h  textures.cpp  textures.h  textures_tci.cpp  textures_tci.h  utils.cpp  utils.h  vertices.cpp  vertices.h
(+502 files in other folders)
