target_sources(Runtime
  PRIVATE
    "dear_imgui.cpp"
    "debug.cpp"
    "engine.cpp"
    "Input.cpp"
  PUBLIC
    "client_app.h"
    "dear_imgui.h"
    "debug.h"
    "Engine.h"
    "Input.h"
    "prelude.h"
    "types.h"
)

add_subdirectory("gfx")
add_subdirectory("math")
add_subdirectory("platform")
add_subdirectory("scene")
add_subdirectory("shared")
