target_sources(${CURRENT_TARGET}
  PRIVATE
    "camera.cpp"
    "command_list_recorder.cpp"
    "compositor.cpp"
    "device_state_cache.cpp"
    "draw_target.cpp"
    "resource_cache.cpp"
    "scene_view.cpp"
  PUBLIC
    "camera.h"
    "command_list_recorder.h"
    "compositor.h"
    "device_state_cache.h"
    "draw_target.h"
    "drawable.h"
    "resource_cache.h"
    "scene_view.h"
    "types.h"
)

add_subdirectory("backend")
